# starry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agents_team_options.md  common_behavior_team_chat.md  demo_LLM_lib.py  install.sh  next_fixes.md  pending_fixes_4_team_roundtable.md  plan_agentic_team_chat.md  plan_ai_coder.md  prompts_conflicts.md  pyproject.toml  requirements.txt
config/: default.toml
docs/: cli_developers_guide.md  user_manual.md
next_fixes/: beast.md  next_fixes.md  plan.md  plan_commands.md  plan_conf_dirs.md
old_plans_already_applied/: README.md  README_davy_cli.md  Session01.md  Session02.md  agentic_updates_plan.md  bug_fixes_applied_04222026.md  mytools.md  pending_issues_apr_2026.md  plan.md  plan_04162026.md  plan_04172026.md  plan_04182026.md  plan_04202026.md  plan_04202026_2.md  plan_04212026.md  plan_bugfixes_04212026.md  plan_cli_elements.md  plan_for_claude_experience.md  plan_massive_renaming.md  plan_roles.md  plan_skills.md  plan_starry_migration.md  summary.05212026.md
oldplan_done_already/: old_plans_applied.md  plan_debate.md  roundtable_plan.md
prompts/: beast.txt  new_assistant.txt  new_plan_mode.txt  opencode.md  plan_forplanmode.md  role_assistant.txt  role_coder.txt  role_codereviewer.txt  role_integrator.txt  role_pm.txt  role_researcher.txt  role_sage.txt  role_sysadmin.txt  role_tester.txt
starry_cli/: __init__.py  __main__.py  dialogs.py  main.py
starry_cli/themes/: __init__.py  bubbles.json  (+13 more)
starry_lib/: __init__.py  example_tools.py  providers.py  types.py
tests/: __init__.py  conftest.py
(+108 files in other folders)
